# erable

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.fr.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_freshness.yml  feature_request.yml
backend/: README.md  pyproject.toml
docs/adr/: 0001-fastapi-arq-over-django-celery.md  0002-lemon-squeezy-over-stripe-direct.md  0003-hetzner-coolify-over-aws-production.md  0004-auth-from-scratch.md  0005-litellm-with-facade.md  0006-pgvector-over-dedicated-vector-db.md  0007-privacy-radical-architecture.md  0008-privacy-preserving-learning-architecture.md  README.md
