[project]
name = "erable"
version = "0.1.0"
description = "AI-powered settlement guide for francophone newcomers to Canada"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Michael Das", email = "12345678+mdsiha@users.noreply.github.com" }
]
dependencies = [
    "fastapi[standard]>=0.136.0,<0.137.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "structlog>=25.1.0,<26.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.14.0,<3.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erable"]

# =============================================================================
# Ruff — linter + formatter
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "ASYNC", # async-specific rules
    "S",     # bandit (security)
    "T20",   # no print statements
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (we use it in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # tests can use assert and hardcoded passwords

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy — type checking
# =============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest — tests
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: unit tests (fast, isolated)",
    "integration: integration tests (require running services)",
    "e2e: end-to-end tests (slow)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
